new functions and frontend(Home page, Header, DetailsPage and Seach Page)
