# gateway/src/app.js
@@ -12,7 +12,6 @@ app.use(express.json());
 const swaggerDocument = YAML.load("./api-doc.yaml");
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-// User routes
 app.post("/api/users/register", async (req, res) => {
   try {
     const response = await axios.post(
@@ -77,15 +76,42 @@ app.get("/api/books/reading", async (req, res) => {
 app.get("/api/books/search", async (req, res) => {
   try {
     const response = await axios.get(
-      `http://localhost:3002/api/books/search?q=${encodeURIComponent(req.query.q)}`,
-      { headers: { Authorization: req.headers.authorization } }
+      `http://localhost:3002/api/books/search?q=${encodeURIComponent(req.query.q)}`
     );
+    res.status(response.status).json(response.data);
+  } catch (err) {
+    res
+      .status(err.response?.status || 500)
+      .json(err.response?.data || { error: err.message });
+  }
+});
+
+app.get("/api/books/:bookId", async (req, res) => {
+  try {
+    const { bookId } = req.params;
+
+    const response = await axios.get(
+      `http://localhost:3002/api/books/${bookId}`
+    );
+
+    res.status(response.status).json(response.data);
+  } catch (err) {
+    res
+      .status(err.response?.status || 500)
+      .json(err.response?.data || { error: err.message });
+  }
+});
+
+app.get("/api/books/:bookId/status", async (req, res) => {
+  try {
+    const { bookId } = req.params;
+    const response = await axios.get(`http://localhost:3002/api/books/${bookId}/status`, {
+      headers: { Authorization: req.headers.authorization }
+    });
     res.status(response.status).json(response.data);
   } catch (err) {
     res.status(err.response?.status || 500).json(err.response?.data || { error: err.message });
   }
 });
-
-
 
 app.listen(3000, () => console.log("Gateway running on port 3000"));
